force-app/main/default/objects/animalos__Legal_Code__c/animalos__Legal_Code__c.object-meta.xml
<CustomObject>
    <label>Legal Code</label>
    <nameField>
        <label>Legal Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>