force-app/main/default/objects/animalos__Legal_Code__c/fields/animalos__Legal_Code_Numbers__c.field-meta.xml
<CustomField>
    <fullName>animalos__Legal_Code_Numbers__c</fullName>
    <label>Legal Code Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>