force-app/main/default/objects/animalos__Legal_Code__c/fields/animalos__Legislation__c.field-meta.xml
<CustomField>
    <fullName>animalos__Legislation__c</fullName>
    <label>Legislation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>