force-app/main/default/objects/animalos__Legal_Code__c/fields/animalos__Section_Clause__c.field-meta.xml
<CustomField>
    <fullName>animalos__Section_Clause__c</fullName>
    <label>Section/Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>