force-app/main/default/objects/animalos__Legal_Code__c/fields/animalos__Short_Description__c.field-meta.xml
<CustomField>
    <fullName>animalos__Short_Description__c</fullName>
    <label>Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>